# sorted_frozen_set

./: .gitignore  README.md  example.py  pyproject.toml
main/: dtypes.py  sorted_frozen_set.py
tests/: test_container_protocol.py  test_contructuction.py  test_iterable_protocol.py  test_sized_protocol.py
